# RISCV_Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  README.md  main.c
src/: executer.c  executer.h  executor.c  executor.h  instruction_decoding.c  instruction_decoding.h  instruction_execution.c  instruction_execution.h  instruction_forward.c  instruction_forward.h  main.c  memory.c  memory.h
tests/: tester.c
tests/task0/: sblbtest.res
